[package]
name = "ysoserial"
authors = ["Kali-Team <root@kali-team.cn>"]
version = "0.1.0"
edition = "2018"
description = "Ysoserial pure Rust implementation."
license = "MIT"
include = ["LICENSE", "Cargo.toml", "src/**/*.rs"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "ysoserial-rs"]
[profile.release.package.ysoserial-rs]

opt-level = "z"
codegen-units = 1

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 3
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
once_cell = "1.10.0"
argh = "0.1.8"
hex = "0.4.3"
base64 = "0.13.0"
ysoserial-rs = { path = "ysoserial-rs", package = "ysoserial-rs" }